--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,20 @@
-# ---------- Python ----------
+# Logs & temp
+*.log
+*.txt
+training_state.txt
+debug_*.json
+
+# Android
+**/build/
+**/.gradle/
+**/.idea/
+*.apk
+*.aab
+
+# Python
 __pycache__/
 *.pyc
-.env
 
-# ---------- ML Models ----------
+# ML models (keep only final)
 *.h5
-*.pt
-*.onnx
-
-# ---------- Android ----------
-.gradle/
-build/
-*/build/
-*.apk
-local.properties
-intermediates/
-outputs/
-
-# ---------- OS ----------
-.DS_Store
-Thumbs.db
+*.ckpt
